- Added class "rwl" to object.

File: co021.rda
-------------------------
- Added class "rwl" to object.

File: gp.rwl.rda
-------------------------
- Added class "rwl" to object.


File: rwl.plot.R
-------------------------
- New wrapper to plot rwl objects. This is setting the
  stage for having plot, summary, etc. methods for rwl
  objects. There are still several things to work on. Like
  setting the class() of rwl data objects via read.rwl (and in 
  the onboard data sets). And will this class change break any 
  existing functions?

File: spag.plot.R
-------------------------
- Cosmetic changes to plot.

File: seg.plot.R
-------------------------
- Cosmetic changes to plot.

File: crn.plot.R
-------------------------
- Added several new plotting options to give users more control of plot
- Aliased crn.plot to chron.plot to be consistent with the chron() function.
  It was confusing to use bar <- chon(foo) but not be able to use
  chron.plot(bar). It would be nice to make chron an S3method to thus be
  able to just do plot(bar) I suppose.
- Help revised considerably

File: rwi.stats.running.R
-------------------------

- Added signal-to-noise ratio as an output. Followed pg 109 in
  Cook's chapter in Hughes et al. 2011.
- New outputs 'n.cores' and 'n.trees' show the total number of cores and
  trees in the window, respectively.  At least one non-missing value is
  required for a core and tree to be counted.
- When using period = "common" in rwi.stats() or
  rwi.stats.running(), the number of trees 'n' in the return value
  is now 0 instead of the full number in case there are no complete
  cases in the running window.
- 'c.eff' in the return value is now 0 if no correlations were
  computed
- Optimizations

* CHANGES IN dplR VERSION 1.5.9

Files: dplR.h, rcompact.c, redfit.c
-----------------------------------

- Restructured header inclusions
- dplR.h declares new function dplRlength (internal use)

File: dplR.c
------------
